--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,3 +10,4 @@ importFrom(httr,add_headers)
 importFrom(httr,content)
 importFrom(httr,http_error)
 importFrom(jsonlite,toJSON)
+importFrom(methods,is)
